--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -82,6 +82,7 @@
     grid-column: 1 / 3;
     grid-row: 1;
     margin-left: 1rem;
+    text-align: center;
   }
   div {
     grid-column: 1 / 11;
