--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$header-font-family: 'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$base-font-family: 'Roboto', Helvetica, Arial, sans-serif;
+$header-font-family: 'Istok Web', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 
 @mixin clearfix {
