--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,8 +26,19 @@
   width: 100%;
   height: 60px;
   background-color: white;
+}
+
+body {
+  padding-top: 60px;
+}
+
+.site-left-nav {
+  position: absolute;
+  left: 0px;
+  margin-left: 1rem;
+  z-index: 1;
   a {
-    font-family: sans-serif;
+    font-family: $base-font-family;
     color: cadetblue;
     text-decoration: none;
     padding: 0.5em;
@@ -40,32 +51,42 @@
   }
 }
 
-body {
-  padding-top: 60px;
-}
-
-.site-left-nav {
-  position: absolute;
-  left: 0px;
-  margin-left: 1rem;
-  z-index: 1;
-}
-
 .main-nav {
   position: absolute;
   left: 0;
   right: 0;
   margin: auto;
-}
-
-h1.logo {
   line-height: 60px;
+  a {
+    font-family: 'Fredericka the Great', cursive;
+    font-size: 2rem;
+    color: black;
+    text-decoration: none;
+    border: 0;
+
+    &:hover {
+      color: black;
+      background-color: none;
+    }
+  }
 }
 
 .site-right-nav {
   position: absolute;
   right: 0px;
   margin-right: 1rem;
+  a {
+    font-family: $base-font-family;
+    color: cadetblue;
+    text-decoration: none;
+    padding: 0.5em;
+    border: 0;
+
+    &:hover {
+      color: white;
+      background-color: cadetblue;
+    }
+  }
 }
 
 .search-bar label {
