--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <%= stylesheet_link_tag    "https://fonts.googleapis.com/css?family=Josefin+Sans:700|Libre+Baskerville" %>
+    <%= stylesheet_link_tag    "https://fonts.googleapis.com/css?family=Josefin+Sans:700|Libre+Baskerville|Fredericka+the+Great|Istok+Web|Roboto" %>  
     <%= stylesheet_link_tag    'application', media: 'all' %>
 
     <%= csrf_meta_tags %>
@@ -24,7 +24,7 @@
       </div>
 
       <div class = "main-nav">
-        <h1 class="logo">Crowdfunder</h1>
+        <%= link_to "Crowdfunder", root_url %>
       </div>
 
 
