--- a/app/views/users/owner.html.erb
+++ b/app/views/users/owner.html.erb
@@ -1,7 +1,15 @@
-<section class="hero-image" style="background-image: url(<%= @owner.cover_pic %>)">
-
+<section class="hero-image">
+  <% if @owner.cover_pic != "crowdfunder_hero" %>
+  <style>
+    .hero-image {
+      background-image:
+        linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        asset-url(<%= @owner.cover_pic %>);
+    }
+  </style>
+  <% end %>
 <div class="profile-img"><%= image_tag @owner.user_pic %></div>
-  <h1><%= @owner.full_name %></h1>
+  <h1><%= @owner.first_name %> <%= @owner.last_name %></h1>
   <p><%= @owner.first_name %> has backed a total of <%= number_to_currency(@owner.pledges.map {|pledge| pledge.dollar_amount}.sum) %> on Crowfunder!</p>
 </section>
 
