--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
-<section class="hero-image" style="background-image: url(<%= @user.cover_pic %>)">
+<% if @owner.cover_pic != "crowdfunder_hero" %>
+  <section class="hero-image" style="background-image: url(<%= @user.cover_pic %>)">
+<% else %>
+  <section class="hero-image">
+<% end %>
 <div class="profile-img"><%= image_tag @user.user_pic %></div>
 <h1>Hi <%= current_user.first_name %></h1>
 <p>You have backed a total of <%= number_to_currency(current_user.pledges.map {|pledge| pledge.dollar_amount}.sum) %> on Crowfunder!</p>
